# goit-algo2-hw-05

./: README.md  pyproject.toml
app/: task1.py  task2.py
